--- a/index.css
+++ b/index.css
@@ -44,6 +44,18 @@ header {
     font-size: 14px;
     font-weight: 400;
     line-height: 1.5;
+    position: relative;
+}
+.lang::after {
+    content: '';
+    width: 5px;
+    height: 5px;
+    border-top: 2px solid var(--discord-blue);
+    border-right: 2px solid var(--discord-blue);
+    transform: rotate(135deg);
+    display: inline-block;
+    position: absolute;
+
 }
 .inquiry {
     color: var(--discord-blue);
