--- a/index.css
+++ b/index.css
@@ -23,6 +23,7 @@ header {
     display: flex;
     white-space: nowrap;
     position: relative;
+    justify-content: space-between;
 
 }
 .feedback {
@@ -34,6 +35,8 @@ header {
     font-size: 14px;
     font-weight: 400;
     line-height: 1.5;
+    
+    
 }
 .lang {
     color: var(--discord-blue);
@@ -45,33 +48,36 @@ header {
     font-weight: 400;
     line-height: 1.5;
     position: relative;
+    align-items: center;
+    
 }
 .lang::after {
     content: '';
     width: 5px;
     height: 5px;
-    border-top: 2px solid var(--discord-blue);
-    border-right: 2px solid var(--discord-blue);
-    transform: rotate(135deg);
+    border-top: 1px solid var(--discord-blue);
+    border-right: 1px solid var(--discord-blue);
+    transform: rotate(135deg) translate(-20%,-140%);
     display: inline-block;
     position: absolute;
+    
+    
 
 }
 .inquiry {
     color: var(--discord-blue);
     width: auto;
     border: 0;
-    padding: 0 10px 0;
+    padding: 0 5px 0;
     text-decoration: none;
     font-size: 14px;
     font-weight: 400;
     line-height: 1.5;
-
+    margin-left: 10px;
 }
 .login{
     color: var(--discord-blue);
     border: 0;
-    padding: 0 10px 0;
     text-decoration: none;
     font-size: 14px;
     font-weight: 400;
@@ -80,10 +86,6 @@ header {
 .pc-view-header > a:hover {
     text-decoration: underline;
 }
-.header-light-group1 > a:hover {
-    text-decoration: underline;
-}    
-
 #intro {
     text-align: center;
 }
@@ -116,6 +118,14 @@ h5 {
     display: block;
 
 }
+
+.serch-bar{
+    width: 600px;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+}
+
 input {
     border: 1px solid #666;
     border-radius: 30px;
@@ -124,8 +134,14 @@ input {
     height: 40px;
     padding-left: 40px;
     padding-right: 20px;
-    width: 600px;
+    width: 100%;
     outline: none;
+}
+
+.serch-bar > svg {
+    position: absolute;
+    margin-left: 15px;
+   
 }
 
 #intro > p {
@@ -155,4 +171,61 @@ input {
 
 .suppoter-discord:hover {
     text-decoration: underline;
+}
+li {
+    background: white;
+    padding: 5px;
+    width: 240px;
+    height: 240px;
+    margin: 10px;
+    text-align: center;
+    border-radius: 5px;
+}
+
+li > h2 {
+    color: var(--discord-blue);
+    font-size: 22px;
+    font-weight: 400;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    text-decoration: none;
+
+}
+
+h3 {
+    color: #687272;
+    text-decoration: none;
+}
+
+hr {
+    height: 1px;
+    border: none;
+    background-color: #99aab5;
+    opacity: 0.5;
+    width: 50px;
+    
+
+}
+
+.category-grid {
+    display: block;
+    margin: 0 auto;
+    max-width: var(--container-size);
+    
+}
+
+.menu1 {
+    align-items: center;
+    margin: 0 auto;
+
+}
+
+img {
+    width: 106px;
+}
+
+ul {
+    display: flex;
+    max-width: var(--container-size);
+    justify-content: center;
 }
