--- a/index.css
+++ b/index.css
@@ -123,7 +123,9 @@ h5 {
 }
 
 .serch-bar{
-    width: 600px;
+
+    max-width: 600px;
+    width: 60%;
     display: flex;
     align-items: center;
     margin: 0 auto;
@@ -205,7 +207,7 @@ h3 {
     
 }
 
-hr {
+li > hr {
     height: 1px;
     border: none;
     background-color: #99aab5;
@@ -306,6 +308,7 @@ button:hover {
 }
 
 .app {
+    
     background-image: url(img/Multiple_dewices.png);
     background-size: 814px 145px;
     width: 814px;
@@ -320,4 +323,26 @@ button:hover {
 
 .app > a:hover {
     opacity: 100%;
+}
+
+.app > a > .browsers {
+    margin-top:  60px;
+    margin-left: 84px;
+}
+
+.app > a > .Android {
+    margin-left: 115px;
+    margin-top: 10px;
+}
+.app > a > .ios {
+    margin-left: 49px;
+}
+
+.app > a > .Windows {
+    margin-left: 105px;
+}
+
+hr {
+    opacity: 0.1;
+    width: 1160px;
 }
