--- a/index.css
+++ b/index.css
@@ -82,35 +82,37 @@ header {
     font-size: 14px;
     font-weight: 400;
     line-height: 1.5;
+    margin-right: 20px;
 }
 
 .mobile-view {
-    width: 15px;
-    height: 2px;
+    width: 12px;
+    height: 1px;
     background-color: var(--discord-blue);
     position: relative;
     display: block;
     margin: 8px 0;
     content: '';
+    margin-right: 25px;
 }
 
 .mobile-view::after {
     content: '';
     position: absolute;
-    width: 15px;
-    height: 2px;
+    width: 12px;
+    height: 1px;
     background-color: var(--discord-blue);
-    top: 5px;
+    top: 4px;
 
 }
 
 .mobile-view::before {
     content: '';
     position: absolute;
-    width: 15px;
-    height: 2px;
+    width: 12px;
+    height: 1px;
     background-color: var(--discord-blue);
-    top: -5px;
+    top: -4px;
 }
 @media screen and (min-width:768px) {
     .mobile-view {
